[3.6] bpo-31490: Fix an assertion failure in ctypes in case an _anonymous_ attr is defined only outside _fields_. (GH-3615) (#3774)

(cherry picked from commit 30b61b51e05d2d43e8e2e783b0a9df738535423b)